--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "dotenv-cli": "^3.1.0",
+    "pure-react-carousel": "^1.24.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
